<resources>
    <string name="app_name">Formulir Sederhana</string>
    <string name="nama">Nama</string>
    <string name="hint_nama">Masukkan Nama</string>
    <string name="nim">NIM</string>
    <string name="hint_nim">Masukkan NIM</string>
    <string name="hp">No. Hp</string>
    <string name="hint_hp">Masukkan Nomor HP</string>
    <string name="alamat">Alamat</string>
    <string name="hint_alamat">Masukkan Alamat</string>
    <string name="btn_simpan">Simpan</string>
</resources>
