<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.ac.unsyiah.informatika.formulirsederhana.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:id="@+id/txt_nama" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_nama"
            android:hint="@string/hint_nama"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:id="@+id/txt_nim" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_nim"
            android:hint="@string/hint_nim"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            android:id="@+id/txt_hp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_hp"
            android:hint="@string/hint_hp"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:id="@+id/txt_alamat" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/hint_alamat"
        android:inputType="textMultiLine"
        android:layout_weight="1"
        android:id="@+id/edit_alamat" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_simpan"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
